<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">简约音乐播放器</string>
    <string name="import_audio">导入</string>
    <string name="remove_track">删除</string>
    <string name="playlist">歌单</string>
    <string name="lyrics">歌词</string>
    <string name="online">在线</string>
    <string name="search_online">搜索歌曲、歌手</string>
    <string name="download_play">下载并播放</string>
    <string name="status_ready">准备就绪</string>
    <string name="search_local">搜索本地歌曲</string>
    <string name="search_action">搜索</string>
    <string name="artwork_description">歌曲封面</string>
    <string name="no_track">未播放歌曲</string>
    <string name="select_track">请选择歌曲</string>
    <string name="import_to_play">导入歌曲后开始播放</string>
    <string name="previous_track">上一曲</string>
    <string name="next_track">下一曲</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="volume">音量</string>
    <string name="mute">静音</string>
    <string name="unmute">恢复音量</string>
    <string name="play_mode_order">顺序播放</string>
    <string name="play_mode_shuffle">随机播放</string>
    <string name="play_mode_repeat_one">单曲循环</string>
    <string name="remove_confirm_title">删除歌曲</string>
    <string name="remove_confirm_message">将“%1$s”从歌单和本地文件中删除？</string>
    <string name="cancel">取消</string>
    <string name="confirm_remove">删除</string>
    <string name="time_zero">00:00</string>
    <string name="volume_default">70%</string>
    <string name="volume_percent">%1$d%%</string>
    <string name="track_subtitle">%1$s · %2$s</string>
    <string name="storage_permission_title">保存到手机 music 文件夹</string>
    <string name="storage_permission_message">开启所有文件访问权限后，下载的歌曲会保存到手机内部存储根目录的 music 文件夹。未开启时将保存到系统 Music/music 目录。</string>
    <string name="storage_permission_action">去授权</string>
    <string name="storage_permission_fallback">使用系统音乐目录</string>
    <string name="refresh_lyrics">刷新歌词</string>
</resources>
